--- a/doc/Gilbert.tex
+++ b/doc/Gilbert.tex
@@ -48,7 +48,8 @@ twocolumn,
 %\conference{EXAG 2024: AIIDE Workshop on Experimental AI in Games, November 18--22, 2024, Lexington, KY, USA}
 \input{CONFERENCE.tex}
 
-\title{ A Generalized 2D and 3D Hilbert Curve }
+%\title{ A Generalized 2D and 3D Hilbert Curve }
+\title{ The Gilbert Curve: A Generalized 2D and 3D Hilbert Curve }
 
 \input{AUTHOR.tex}
 
