additional eccentric figures
* alpha <<
* beta <<

--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -427,15 +427,13 @@ of $|\beta|$ small relative to the other two side lengths.
 % /_.__/\__/\__/\_,_/    /_/_/ 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
 \begin{figure}[h]
   \centering
-  \includegraphics[width=\linewidth]{gilbert3d_eccentric_appendix_s2.pdf}
+  \includegraphics[width=\linewidth]{gilbert3d_eccentric_beta_gt.pdf}
   \caption{ An $S_2$ eccentric subdivision showing the threshold, $\sigma$, used to determine when we should use this split
             and the split point ratio, $\rho$, to reduce the defect for a more harmonious subdivision. }
-  \label{fig:eccentric_s2}
+  \label{fig:eccentric_beta_gt}
 \end{figure}
-
 
 \begin{itemize}
   \item $\sigma = \frac{3}{2}$
@@ -443,7 +441,6 @@ of $|\beta|$ small relative to the other two side lengths.
   \item $|\beta| > \sigma \cdot \text{min}( |\alpha|, |\gamma|)$
   \item Shape template: $S_2$
 \end{itemize}
-
 
 Here $|\beta|$ is the eccentric length, surpasing $\sigma = 3/2$ of the minimum
 of the other two lengths to
@@ -497,6 +494,15 @@ Showing an average defect reduction.
 % \_,_/_/ .__/_//_/\_,_/   \_\_\
 %      /_/                      
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=\linewidth]{gilbert3d_eccentric_alpha_lt.pdf}
+  \caption{ An $S_1$ eccentric subdivision showing the threshold, $\sigma$, used to determine when we should use this split
+            and the split point ratio, $\rho$, to reduce the defect for a more harmonious subdivision. }
+  \label{fig:eccentric_alpha_lt}
+\end{figure}
+
 
 \begin{itemize}
   \item $\sigma = \frac{3}{2}$
