all eccentric figures for appendix now produced

--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -563,6 +563,15 @@ Confirming a defect reduction.
 % /___/                               
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=\linewidth]{gilbert3d_eccentric_gamma_lt.pdf}
+  \caption{ An $S_1$ eccentric subdivision showing the threshold, $\sigma$, used to determine when we should use this split
+            and the split point ratio, $\rho$, to reduce the defect for a more harmonious subdivision. }
+  \label{fig:eccentric_gamma_lt}
+\end{figure}
+
+
 \begin{itemize}
   \item $\sigma = \frac{3}{2}$
   \item $\rho = \frac{1}{3}$
