--- a/doc/Gilbert.tex
+++ b/doc/Gilbert.tex
@@ -49,7 +49,7 @@ twocolumn,
 \input{CONFERENCE.tex}
 
 %\title{ A Generalized 2D and 3D Hilbert Curve }
-\title{ The Gilbert Curve: A Generalized 2D and 3D Hilbert Curve }
+\title{ A Generalized 2D and 3D Hilbert Curve }
 
 \input{AUTHOR.tex}
 
